--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" th:href="@{/css/login.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light d-flex justify-content-center align-items-center vh-100">
-    <div class="card shadow p-4" style="width: 100%; max-width: 400px;">
-        <h3 class="text-center text-success mb-4">Iniciar Sesión</h3>
+<body class="bg-overlay d-flex justify-content-center align-items-center vh-100">
+    <div class="card shadow p-4" style="width: 100%; max-width: 420px;">
+        <h3 class="text-center mb-4">Acceso al Sistema</h3>
         <form th:action="@{/login}" method="post">
             <div class="mb-3">
                 <label class="form-label">Usuario</label>
